In finanace card the social media icons earlier overlaped with the card content now it fixed

--- a/css/style.css
+++ b/css/style.css
@@ -633,7 +633,7 @@ strong {
   top: 0;
   right: 0;
   left: 0;
-  padding: 30px;
+  padding: 15px;
 }
 
 .social-share {
@@ -642,7 +642,7 @@ strong {
   right: 0;
   left: 0;
   z-index: 2;
-  padding: 20px 35px;
+  padding: 0px 35px;
 }
 
 .social-share .bi-bookmark {
